; ModuleID = '/home/carl/AnghaBench/brotli/c/enc/extr_encode.c_MakeUncompressedStream.c'
source_filename = "/home/carl/AnghaBench/brotli/c/enc/extr_encode.c_MakeUncompressedStream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i64, i32*)* @MakeUncompressedStream to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @MakeUncompressedStream(i32* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %14 = load i64, i64* %6, align 8
  store i64 %14, i64* %8, align 8
  store i64 0, i64* %9, align 8
  store i64 0, i64* %10, align 8
  %15 = load i64, i64* %6, align 8
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %3
  %18 = load i32*, i32** %7, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 0
  store i32 6, i32* %19, align 4
  store i64 1, i64* %4, align 8
  br label %113

20:                                               ; preds = %3
  %21 = load i32*, i32** %7, align 8
  %22 = load i64, i64* %9, align 8
  %23 = add i64 %22, 1
  store i64 %23, i64* %9, align 8
  %24 = getelementptr inbounds i32, i32* %21, i64 %22
  store i32 33, i32* %24, align 4
  %25 = load i32*, i32** %7, align 8
  %26 = load i64, i64* %9, align 8
  %27 = add i64 %26, 1
  store i64 %27, i64* %9, align 8
  %28 = getelementptr inbounds i32, i32* %25, i64 %26
  store i32 3, i32* %28, align 4
  br label %29

29:                                               ; preds = %86, %20
  %30 = load i64, i64* %8, align 8
  %31 = icmp ugt i64 %30, 0
  br i1 %31, label %32, label %107

32:                                               ; preds = %29
  store i32 0, i32* %11, align 4
  %33 = load i64, i64* %8, align 8
  %34 = icmp ugt i64 %33, 16777216
  br i1 %34, label %35, label %36

35:                                               ; preds = %32
  br label %39

36:                                               ; preds = %32
  %37 = load i64, i64* %8, align 8
  %38 = trunc i64 %37 to i32
  br label %39

39:                                               ; preds = %36, %35
  %40 = phi i32 [ 16777216, %35 ], [ %38, %36 ]
  store i32 %40, i32* %12, align 4
  %41 = load i32, i32* %12, align 4
  %42 = icmp ugt i32 %41, 65536
  br i1 %42, label %43, label %48

43:                                               ; preds = %39
  %44 = load i32, i32* %12, align 4
  %45 = icmp ugt i32 %44, 1048576
  %46 = zext i1 %45 to i64
  %47 = select i1 %45, i32 2, i32 1
  store i32 %47, i32* %11, align 4
  br label %48

48:                                               ; preds = %43, %39
  %49 = load i32, i32* %11, align 4
  %50 = shl i32 %49, 1
  %51 = load i32, i32* %12, align 4
  %52 = sub i32 %51, 1
  %53 = shl i32 %52, 3
  %54 = or i32 %50, %53
  %55 = load i32, i32* %11, align 4
  %56 = mul i32 4, %55
  %57 = add i32 19, %56
  %58 = shl i32 1, %57
  %59 = or i32 %54, %58
  store i32 %59, i32* %13, align 4
  %60 = load i32, i32* %13, align 4
  %61 = load i32*, i32** %7, align 8
  %62 = load i64, i64* %9, align 8
  %63 = add i64 %62, 1
  store i64 %63, i64* %9, align 8
  %64 = getelementptr inbounds i32, i32* %61, i64 %62
  store i32 %60, i32* %64, align 4
  %65 = load i32, i32* %13, align 4
  %66 = lshr i32 %65, 8
  %67 = load i32*, i32** %7, align 8
  %68 = load i64, i64* %9, align 8
  %69 = add i64 %68, 1
  store i64 %69, i64* %9, align 8
  %70 = getelementptr inbounds i32, i32* %67, i64 %68
  store i32 %66, i32* %70, align 4
  %71 = load i32, i32* %13, align 4
  %72 = lshr i32 %71, 16
  %73 = load i32*, i32** %7, align 8
  %74 = load i64, i64* %9, align 8
  %75 = add i64 %74, 1
  store i64 %75, i64* %9, align 8
  %76 = getelementptr inbounds i32, i32* %73, i64 %74
  store i32 %72, i32* %76, align 4
  %77 = load i32, i32* %11, align 4
  %78 = icmp eq i32 %77, 2
  br i1 %78, label %79, label %86

79:                                               ; preds = %48
  %80 = load i32, i32* %13, align 4
  %81 = lshr i32 %80, 24
  %82 = load i32*, i32** %7, align 8
  %83 = load i64, i64* %9, align 8
  %84 = add i64 %83, 1
  store i64 %84, i64* %9, align 8
  %85 = getelementptr inbounds i32, i32* %82, i64 %83
  store i32 %81, i32* %85, align 4
  br label %86

86:                                               ; preds = %79, %48
  %87 = load i32*, i32** %7, align 8
  %88 = load i64, i64* %9, align 8
  %89 = getelementptr inbounds i32, i32* %87, i64 %88
  %90 = load i32*, i32** %5, align 8
  %91 = load i64, i64* %10, align 8
  %92 = getelementptr inbounds i32, i32* %90, i64 %91
  %93 = load i32, i32* %12, align 4
  %94 = call i32 @memcpy(i32* %89, i32* %92, i32 %93)
  %95 = load i32, i32* %12, align 4
  %96 = zext i32 %95 to i64
  %97 = load i64, i64* %9, align 8
  %98 = add i64 %97, %96
  store i64 %98, i64* %9, align 8
  %99 = load i32, i32* %12, align 4
  %100 = zext i32 %99 to i64
  %101 = load i64, i64* %10, align 8
  %102 = add i64 %101, %100
  store i64 %102, i64* %10, align 8
  %103 = load i32, i32* %12, align 4
  %104 = zext i32 %103 to i64
  %105 = load i64, i64* %8, align 8
  %106 = sub i64 %105, %104
  store i64 %106, i64* %8, align 8
  br label %29

107:                                              ; preds = %29
  %108 = load i32*, i32** %7, align 8
  %109 = load i64, i64* %9, align 8
  %110 = add i64 %109, 1
  store i64 %110, i64* %9, align 8
  %111 = getelementptr inbounds i32, i32* %108, i64 %109
  store i32 3, i32* %111, align 4
  %112 = load i64, i64* %9, align 8
  store i64 %112, i64* %4, align 8
  br label %113

113:                                              ; preds = %107, %17
  %114 = load i64, i64* %4, align 8
  ret i64 %114
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
